kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: millab-backend
  namespace: default
  labels:
    app: millab-backend
spec:
  type: ClusterIP
  selector:
    app: millab-backend
  ports:
  - port: 80
    targetPort: 8080
    name: http
