kubernetes/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-backend
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: millab-backend
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect-backend@kubernetescrd
spec:
  tls:
  - hosts:
    - api.millabindonesia.com
    secretName: millab-backend-tls
  rules:
  - host: api.millabindonesia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: millab-backend
            port:
              number: 80
